--- a/app/templates/page_etablissement.html
+++ b/app/templates/page_etablissement.html
@@ -6,7 +6,7 @@
 <div class="container">
     <!-- Détails de l'établissement -->
     <div class="etablissement-header">
-        {{ afficher_objet('etablissement', etablissement) }}
+        {{ afficher_objet('etablissement', etablissement, current_user, form_etab) }}
     </div>
 
     <!-- Grille des flans -->
