Précision sur envoi de form_edit et form_ajout

--- a/app/templates/liste_etablissements.html
+++ b/app/templates/liste_etablissements.html
@@ -210,5 +210,5 @@ const labellise = "{{ request.args.get('labellise') }}";
     </div>
 </div>
 <!-- Grille des établissements -->
-{{ afficher_grille('etablissement', etablissements, current_user, form2, etablissement) }}
+{{ afficher_grille('etablissement', etablissements, current_user, form_edit, form_ajout, etablissement) }}
 {% endblock %}
